# INCLUDE_DIRECTORIES( ${COLLADA_INCLUDE_DIR} ${COLLADA_INCLUDE_DIR}/1.4)

SET(TARGET_SRC
    gltf.cpp
)

SET(TARGET_H
    gltf.h
    picojson.h
    tiny_gltf_loader.h
)


IF(GLTF_DYNAMIC_LIBRARY AND GLTF_STATIC_LIBRARY)
    OPTION(GLTF_USE_STATIC "Set to ON to build OpenSceneGraph with static glTF support." OFF)
ELSEIF(GLTF_STATIC_LIBRARY)
    SET(GLTF_USE_STATIC "YES")
ELSE()
    SET(GLTF_USE_STATIC "NO")
ENDIF()

IF(GLTF_USE_STATIC)
    IF(WIN32)
        ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
        SET(TARGET_LIBRARIES_VARS
            GLTF_STATIC_LIBRARY)
    ELSE()
        SET(TARGET_LIBRARIES_VARS
            GLTF_STATIC_LIBRARY)
    ENDIF()
ELSE()
    IF(WIN32)
        SET(TARGET_LIBRARIES_VARS GLTF_DYNAMIC_LIBRARY)
    ELSE()
        SET(TARGET_LIBRARIES_VARS GLTF_DYNAMIC_LIBRARY)
    ENDIF()

ENDIF()

SET(TARGET_ADDED_LIBRARIES osgAnimation)

#### end var setup  ###
SETUP_PLUGIN(gltf gltf)
